# imas_composer

./: .claudecontext  .gitignore  DEVELOPMENT_PRINCIPLES.md  INSTALLATION.md  README.md  convert_to_ids.py  environment.yaml  environment_dev.yaml  pixi.toml  pyproject.toml
.claude/: .claudecontext  DEVELOPMENT_PRINCIPLES.md  EQUILIBRIUM_ANALYSIS.md  EQUILIBRIUM_IMPLEMENTATION.md  IMPLEMENTING_FIELDS.md  README.md  SESSION_START.md  TESTING_GUIDE.md
.github/workflows/: conda_build.yaml  pr-tests.yml  release.yml
CI/: generate_docs.py
benchmark/: benchmark_equilibrium.py
docs/: ece.yaml  thomson_scattering.yaml
imas_composer/: __init__.py  _version.py  cocos.py  cocos.yaml  composer.py  convert_to_ids.py  core.py  fetchers.py
imas_composer/ids/: base.py  charge_exchange.py  charge_exchange.yaml  core_profiles.py  core_profiles.yaml  core_profiles_factory.py  core_profiles_omfit.py  core_profiles_omfit.yaml  core_profiles_zipfit.py  core_profiles_zipfit.yaml  ec_launchers.py  ec_launchers.yaml  ec_launchers_factory.py  ece.py  ece.yaml  ece_factory.py  ece_omas_reference.py  ece_static_values.yaml  equilibrium.py  equilibrium.yaml  equilibrium_factory.py  gas_injection.py  gas_injection.yaml  ids_factory.py  interferometer.py  interferometer.yaml  magnetics.py  magnetics.yaml  nbi.py  nbi.yaml  pf_active.py  pf_active.yaml  reflectometer_profile.py  reflectometer_profile.yaml  summary.py  summary.yaml  tf.py  tf.yaml  thomson_scattering.py  thomson_scattering.yaml  (+5 more)
imas_composer/plots/: iri_cake_viewer.py
imas_composer/rdb/: d3drdb.py
plots/: d3drdb.py  iri_cake_viewer.py
recipe/: recipe.yaml  run_build.sh
scripts/: README.md  generate_baseline_data.py
tests/: conftest.py  equilibrium_omas_map.yaml  test_baseline_validation.py  test_batch_deduplication.py  test_charge_exchange_composition.py  test_charge_exchange_requirements.py  test_config_charge_exchange.yaml  test_config_core_profiles.yaml  test_config_ec_launchers.yaml  test_config_ece.yaml  test_config_equilibrium.yaml  test_config_gas_injection.yaml  test_config_interferometer.yaml  test_config_magnetics.yaml  test_config_nbi.yaml  test_config_pf_active.yaml  test_config_reflectometer_profile.yaml  test_config_summary.yaml  test_config_tf.yaml  test_config_thomson_scattering.yaml  test_config_wall.yaml  test_core_profiles_composition.py  test_core_profiles_requirements.py  test_ec_launchers_composition.py  test_ec_launchers_requirements.py  test_ece_composition.py  test_ece_integration.py  test_ece_requirements.py  test_ece_static_requirements.py  test_equilibrium_composition.py  test_equilibrium_profiles_2d_bfields.py  test_equilibrium_requirements.py  test_gas_injection_composition.py  test_gas_injection_requirements.py  test_get_supported_fields.py  test_interferometer_composition.py  test_interferometer_requirements.py  test_magnetics_composition.py  test_magnetics_requirements.py  test_nbi_composition.py  (+19 more)
